Fix Axis Flicking Bug Fix Embedded CSS Download: Consider nested CSSStyleRules FIltering:   - filtering series should be only possible if there are multiple series   - slide from top down   - close dropdowns on toolbar hide   - download window: no scrollbar if enough space   - call it "Number of Decimal Points" and "Limit Decimal Points", Remove Decimal Count Label, put number input   - rename remove background elements to remove interactive elements   - remove 'only' for removing labels

--- a/src/scss/window/toolbar/control-elements/dialogs.scss
+++ b/src/scss/window/toolbar/control-elements/dialogs.scss
@@ -4,7 +4,7 @@
     background-color: white;
     box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0, rgba(60, 64, 67, 0.15) 0 1px 3px 1px;
     max-height: 50vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     visibility: hidden;
     transition: opacity 300ms ease-in-out, translate 300ms ease-in-out;
 
@@ -18,9 +18,8 @@
       right: 0;
       inset-inline-start: unset;
       margin: 0;
-      margin-top: 1rem;
       padding: 0.5em;
-      translate: 1rem 0;
+      translate: 0 -1rem;
       &[transition='enter'] {
         opacity: 1;
         translate: 0 0;
@@ -55,12 +54,15 @@
     }
 
     .item {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5em;
+      &--decimal-options { flex-direction: row; }
       label {
         display: flex;
         align-items: center;
         cursor: pointer;
       }
-      > label + label { margin-top: 0.5em }
       input {
         margin-right: 0.5em;
       }
